--- a/src/homeworks/JSX_CSS/Components/AddToCart/AddToCart.module.scss
+++ b/src/homeworks/JSX_CSS/Components/AddToCart/AddToCart.module.scss
@@ -1,64 +1,67 @@
 .containerCart {
-    display: flex;
-    width: 100px;
-    height: 25px;
-    background-color: transparent;
-    text-align: center;
-    margin: 0;
-    padding: 0;
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  display: flex;
+  width: 100px;
+  height: 25px;
+  background-color: transparent;
+  text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .inputCart {
-    width: 33.33333%;
-    height: 100%;
-    text-align: center;
-    border: none;
-    background-color: white;
-    padding: 0;
-    margin: 0;
-    outline: none;
-    appearance: none;
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  width: 33.33333%;
+  height: 100%;
+  text-align: center;
+  border: none;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  appearance: none;
 }
 
 .inputCart:focus {
-    outline: none;
+  outline: none;
 }
 
 .buttonCart {
-    width: 33.33333%;
-    height: 100%;
-    background-color: #f2f2f2;
-    border: none;
-    color: #666;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 0.3s ease;
-    margin: 0;
-    padding: 0;
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  width: 33.33333%;
+  height: 100%;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease;
+  margin: 0;
+  padding: 0;
 }
 
 .buttonCart:hover {
-    background-color: #e0e0e0;
+  background-color: var(--myApp-background-color-hover); // from theme
 }
 
 .buttonInCart {
-    background-color: #f2f2f2;
-    border: none;
-    width: 100%;
-    height: 100%;
-    font-size: 80%;
-    font-weight: bold;
-    color: #666;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 0.3s ease;
-    border-radius: 4px;
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  border: none;
+  width: 100%;
+  height: 100%;
+  font-size: 80%;
+  font-weight: bold;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease;
+  border-radius: 4px;
 }
 
 .buttonInCart:hover {
-    background-color: #e0e0e0;
+  background-color: var(--myApp-background-color-hover); // from theme
 }
