--- a/src/homeworks/JSX_CSS/Components/AppLayout/AppLayout.module.scss
+++ b/src/homeworks/JSX_CSS/Components/AppLayout/AppLayout.module.scss
@@ -1,16 +1,18 @@
 .appLayout {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background-color: #f9f9f9;
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .mainContent {
-    flex-grow: 1;
-    padding: 20px;
-    background-color: #ffffff;
-    max-width: 1200px;
-    margin: 0 auto;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  flex-grow: 1;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
