--- a/src/homeworks/JSX_CSS/Components/CartItem/CartItem.module.scss
+++ b/src/homeworks/JSX_CSS/Components/CartItem/CartItem.module.scss
@@ -1,69 +1,72 @@
 .cartItem {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    padding: 0px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    height: 100px;
-    position: relative;
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  padding: 0px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  height: 100px;
+  position: relative;
 }
 
 .cartItemImage {
-    height: 100%;
-    object-fit: cover;
-    border-radius: 8px;
-    margin-right: 20px;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-right: 20px;
 }
 
 .cartItemDetails {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    position: relative;
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  position: relative;
 }
 
 .cartItemHeader {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-bottom: 10px; /* Отступ между заголовком и AddToCart */
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 10px;
 }
 
 .cartItemHeader h3 {
-    margin: 0;
-    font-size: 18px;
-    font-weight: bold;
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  margin: 0;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .cartItemHeader p {
-    margin: 5px 0;
-    font-size: 16px;
-    color: #555;
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  margin: 5px 0;
+  font-size: 16px;
 }
 
-/* Изменения для кнопки удаления */
 .cartItemRemoveButton {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 32px;
-    height: 32px;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    padding: 0;
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 32px;
+  height: 32px;
+  border: none;
+  cursor: pointer;
+  padding: 0;
 }
 
 .cartItemRemoveButton img {
-    width: 100%;
-    height: 100%;
-    opacity: 0.7;
-    mix-blend-mode: multiply;
-}
-
-.cartItemRemoveButton:hover img {
-    opacity: 1;
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
 }
