--- a/src/homeworks/JSX_CSS/Components/ContentModal/ContentModal.module.scss
+++ b/src/homeworks/JSX_CSS/Components/ContentModal/ContentModal.module.scss
@@ -1,17 +1,18 @@
 .modalOverlay {
+  background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .modalWindow {
-  background-color: white;
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
   width: 300px;
   min-height: 200px;
   position: relative;
@@ -28,11 +29,11 @@
 }
 
 .modalCloseButton {
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
   position: absolute;
   bottom: 10px;
   right: 10px;
-  background-color: #7b8a8f;
-  color: white;
   border: none;
   padding: 10px;
   cursor: pointer;
@@ -41,5 +42,5 @@
 }
 
 .modalCloseButton:hover {
-  background-color: #5c8997;
+  background-color: var(--myApp-background-color-hover); // from theme
 }
