--- a/src/homeworks/JSX_CSS/Components/HeaderMenu/HeaderMenu.module.scss
+++ b/src/homeworks/JSX_CSS/Components/HeaderMenu/HeaderMenu.module.scss
@@ -1,12 +1,26 @@
 .header {
-    position: sticky;
-    top: 0;
-    height: 40px;
-    width: 100%;
-    background-color: rgb(226, 235, 236);
-    padding: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);    
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  position: sticky;
+  top: 0;
+  height: 40px;
+  width: 100%;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.headerContent {
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  display: flex;
+  align-items: center;
+}
+
+.headerRight {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
 }
