--- a/src/homeworks/JSX_CSS/Components/Operation/Operation.module.scss
+++ b/src/homeworks/JSX_CSS/Components/Operation/Operation.module.scss
@@ -1,12 +1,32 @@
 .operation {
-    background-color: white;
-    width: 300px;
-    min-height: 200px;
-    position: relative;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.6);
-    border-radius: 8px;
-  }
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  width: 300px;
+  min-height: 200px;
+  position: relative;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.6);
+  border-radius: 8px;
+}
+
+.operation button {
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  margin: 5;
+  padding: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+
+.operation button:hover {
+  background-color: var(--myApp-background-color-hover); // from theme
+}
