add language switching

--- a/src/homeworks/JSX_CSS/Components/StoryDecorator/StoryDecorator.module.scss
+++ b/src/homeworks/JSX_CSS/Components/StoryDecorator/StoryDecorator.module.scss
@@ -1,13 +1,7 @@
-.header {
-  position: sticky;
-  top: 0;
-  height: 30px;
-  width: 95%;
-  background-color: var(--myApp-background-color);
-  color: var(--myApp-text-color);
-  padding: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.container {
+  display: flex; /* Выравнивание кнопок по горизонтали */
+  justify-content: flex-start; /* Выравнивание кнопок слева */
+  align-items: center; /* Центрирование по вертикали */
+  gap: 10px; /* Расстояние между кнопками */
+  margin-bottom: 20px; /* Отступ снизу для остальных элементов */
 }
