--- a/src/app/App.module.scss
+++ b/src/app/App.module.scss
@@ -2,33 +2,50 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.App p {
+  margin: 10px;
+}
+
+.AppLogo {
+  height: 100%;
   pointer-events: none;
 }
 
+.AppHeader {
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  position: sticky;
+  top: 0;
+  height: 40px;
+  width: 100%;
+  padding: 0px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.AppHeaderContent {
+  background-color: var(--myApp-background-color); // from theme
+  color: var(--myApp-text-color); // from theme
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: left;
+  align-items: end;
+}
+
+.AppLink {
+  color: var(--myApp-text-color);
+}
+
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .AppLogo {
+    animation: AppLogoSpin infinite 20s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  height: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes AppLogoSpin {
   from {
     transform: rotate(0deg);
   }
