--- a/src/components/ProductSummary/ProductSummary.module.scss
+++ b/src/components/ProductSummary/ProductSummary.module.scss
@@ -1,22 +1,21 @@
 .productCard {
   background-color: var(--myApp-background-color); // from theme
   color: var(--myApp-text-color); // from theme
+  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   width: 300px;
-  min-height: 200px;
+  height: 500px;
   position: relative;
   padding: 5px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.6);
-  border-radius: 8px;
+  box-shadow: 4px 4px 10px var(--myApp-shadow-color);
 }
 
 .productImage {
   width: 100%;
   height: 80%;
   object-fit: cover;
-  border-radius: 8px;
   margin-right: 10px;
 }
 
