--- a/src/components/LangSelectorButton/LangSelectorButton.module.scss
+++ b/src/components/LangSelectorButton/LangSelectorButton.module.scss
@@ -5,16 +5,15 @@
 
 .langDropdown {
   background-color: var(--myApp-background-color);
-  color: brown;
-  border: none;
+  color: var(--myApp-text-color);
+  border: 1px solid var(--myApp-border-color);
   width: 100%;
   padding: 5px 10px;
   font-size: 14px;
   cursor: pointer;
-  transition: all 0.3s ease;
+  transition: all 0s ease;
 }
 
 .langDropdown:focus {
   outline: none;
-  border: none;
 }
