--- a/src/components/CartItem/CartItem.module.scss
+++ b/src/components/CartItem/CartItem.module.scss
@@ -5,8 +5,8 @@
   align-items: center;
   margin-bottom: 20px;
   padding: 0px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
+  border: 1px solid var(--myApp-border-color);
+  border-radius: 10px;
   height: 100px;
   position: relative;
 }
@@ -63,10 +63,4 @@
   border: none;
   cursor: pointer;
   padding: 0;
-}
-
-.cartItemRemoveButton img {
-  width: 100%;
-  height: 100%;
-  opacity: 0.7;
 }
