--- a/src/components/GenericList/GenericList.module.scss
+++ b/src/components/GenericList/GenericList.module.scss
@@ -12,7 +12,7 @@
   background-color: transparent;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-auto-rows: 500px;
+  grid-auto-rows: auto;
   gap: 20px;
   justify-content: center;
 }
