--- a/src/components/ContentModal/ContentModal.module.scss
+++ b/src/components/ContentModal/ContentModal.module.scss
@@ -3,8 +3,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,13 +13,11 @@
 .modalWindow {
   background-color: var(--myApp-background-color); // from theme
   color: var(--myApp-text-color); // from theme
-  width: 300px;
-  min-height: 200px;
   position: relative;
   padding: 20px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.6);
   border-radius: 8px;
 }
