--- a/src/forms/SignUpForm/SignUpForm.module.scss
+++ b/src/forms/SignUpForm/SignUpForm.module.scss
@@ -48,6 +48,12 @@
   margin-top: 5px;
 }
 
+.apiError {
+  color: #d9534f;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+
 .button {
   padding: 10px;
   border: none;
