fix profile form styles

--- a/src/forms/ProfileForm/ProfileForm.module.scss
+++ b/src/forms/ProfileForm/ProfileForm.module.scss
@@ -2,8 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  height: 100dvh;
+  width: 100%;
   background-color: var(--myApp-background-color);
+  box-sizing: border-box;
+  padding: 20px; /* Чтобы форма не прилипала к краям на маленьких экранах */
 }
 
 .form {
