--- a/src/components/ContentModal/ContentModal.module.scss
+++ b/src/components/ContentModal/ContentModal.module.scss
@@ -4,39 +4,53 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2000;
 }
 
 .modalWindow {
   background-color: var(--myApp-background-color); // from theme
   color: var(--myApp-text-color); // from theme
   position: relative;
-  padding: 20px;
+  padding: 30px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.6);
-  border-radius: 8px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+  border-radius: 12px;
+  max-width: 90%;
+  margin: auto;
+  transition: transform 0.3s ease-in-out;
+}
+
+.modalWindow:hover {
+  transform: scale(1.02);
 }
 
 .modalContent {
   flex-grow: 1;
+  overflow-y: auto;
+  max-height: 80vh;
+  padding-bottom: 60px; // Add padding to avoid overlap with the button
 }
 
 .modalCloseButton {
   background-color: var(--myApp-background-color); // from theme
   color: var(--myApp-text-color); // from theme
   position: absolute;
-  bottom: 10px;
-  right: 10px;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
   border: none;
-  padding: 10px;
+  padding: 12px 20px;
   cursor: pointer;
-  font-size: 14px;
-  border-radius: 5px;
+  font-size: 16px;
+  border-radius: 8px;
+  transition: background-color 0.3s ease;
 }
 
 .modalCloseButton:hover {
